# fastapi_zero

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
contrib/: env-sample
fastapi_zero/: app.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  user.py
migrations/: env.py
migrations/versions/: 2cb0e7757a3e_create_users_table.py  8f52dc1a8e8e_exercicio_02_aula_04.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_user.py
